objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Auth_Id__c</fullName>
        <externalId>true</externalId>
        <label>Auth Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Unformatted__c</fullName>
        <label>Home Phone Unformatted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Unformatted__c</fullName>
        <label>Mobile Phone Unformatted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>WorkPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Unformatted__c</fullName>
        <label>Work Phone Unformatted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Auth_Id__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>